@@ -21,6 +21,7 @@ Add aliases for common sharp modules
 Fix Shellcode_migrate payload creation
 Start randomuris with a letter then proceed with random letters and numbers as e.g. msbuild errors if task name starts with a number
 Fix issue with cred-popper and keylogger using same variable and conflicting
+Add SCF files to the opsec command
 
 4.8 (13/02/19)
 ==============
